--- a/About.html
+++ b/About.html
@@ -15,11 +15,11 @@
     <header>
         <div class="header-container">
             <nav class="nav">
-                <a href="Works.html" class="current">Works</a>
+                <a href="index.html" class="current">Works</a>
                 <a href="Pictures.html">Pictures</a></nav>
     
                 <div class="logo">
-                    <a href="Works.html"> <img src="eve-10.png"></a>
+                    <a href="index.html"> <img src="eve-10.png"></a>
                     </div>
                 
                 <nav class="nav">
