--- a/game.html
+++ b/game.html
@@ -62,11 +62,11 @@
             <br>Illustrations by hand / Illustrator
             <br>5x7cm - 28 cards</div>
             <br>
-            <a> <img src="F(1.1).jpg"><img src="F(8.1).jpg"></a>
+            <a><img src="F(13).gif"><img src="F(11).jpg"><img src="F(8.1).jpg"></a>
         </div>
 
         <div class="des">
-            <a> <img src="F(6.1).jpg"></a>
+            <a><img src="F(5.1).jpg"><img src="F(1.1).jpg"></a>
         </div>
 
    </div>
