--- a/polke.html
+++ b/polke.html
@@ -69,7 +69,7 @@
                 <source src="Polke.mp4" type="video/mp4">
             </video>
             <br>
-            <a> <img src="V(2).jpg"></a>
+            <a><img src="V(2).jpg"><img src="V(3).jpg"></a>
         </div>
 
    </div>
