--- a/tarot.html
+++ b/tarot.html
@@ -25,7 +25,7 @@
                     
                         <nav class="nav">
                             <a href="About.html">About</a>
-                            <a href="https://www.instagram.com/mooon.svg/"><img src="insta-11.png"></a>
+                            <a class="insta" href="https://www.instagram.com/mooon.svg/"><img src="insta-11.png"></a>
                         </nav>
             </div>
         </header>
