--- a/bianzhidai.html
+++ b/bianzhidai.html
@@ -15,11 +15,11 @@
         <header>
             <div class="header-container">
                 <nav class="nav">
-                    <a href="Projects.html" class="current">Projects</a>
+                    <a href="index.html" class="current">Projects</a>
                     <a href="Pictures.html">Pictures</a></nav>
         
                     <div class="logo">
-                        <a href="Projects.html"> <img src="eve-10.png"></a>
+                        <a href="index.html"> <img src="eve-10.png"></a>
                         </div>
                     
                         <nav class="nav">
