--- a/Photography.html
+++ b/Photography.html
@@ -27,21 +27,37 @@
                     <a class="insta" href="https://www.instagram.com/mooon.svg/"><img src="insta.svg"></a>
                 </nav>
         </header>
-    
 
-    <div class="about">
-            <div class="sur"><h3><a href="https://esad-amiens.design/fr">Eve Mousain ✧ Student at ESAD Amiens</h3></a></div>
-                <div class="sous">
-                    <p><a>I'm a graphic design student at ESAD Amiens since 2023. I like to work on various projects, from typography to 3D, photography, video and design.</a>
-                    <br>
-                    <a><h1>I'm looking for an internship from June to August 2025</h1></a>
-                    <br>
-                    <a><h3>Contact me :</h3> emousain@gmail.com / @mooon.svg</a>
-                </p>
-        </div>
+    <div class="Photography">
+    <div class="picture-a">
+        <a><img src="DSCN2082.JPG"></a>
+        <a><img src="DSCN3462.JPG"></a>
+        <a><img src="DSCN2309.JPG"></a>
+        <a><img src="DSCN3286.JPG"></a>
+        <a><img src="DSCN2248.JPG"></a>
+        <a><img src="DSCN3476.JPG"></a>
+        <a><img src="DSCN2174.JPG"></a>
+        <a><img src="DSCN3279.JPG"></a>
+        <a><img src="DSCN3443.JPG"></a>
+        <a><img src="DSCN4096.JPG"></a>
+        <a><img src="DSCN1357.JPG"></a>
+        <a><img src="DSCN4534.JPG"></a>
+        <a><img src="DSCN3487.JPG"></a>
+        <a><img src="DSCN5684.JPG"></a>
+        <a><img src="DSCN4284.JPG"></a>
     </div>
 
+    <div class="picture-b">
+        <a><img src="y(1).jpg"></a>
+        <a><img src="y(2).jpg"></a>
+        <a><img src="y(3).jpg"></a>
+        <a><img src="y(4).jpg"></a>
+        <a><img src="y(5).jpg"></a>
+        <a><img src="y(6).jpg"></a>
+    </div>
+</div>
 
+    </div>
 <div class="footer">
     
     </div>
