--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eve Mousain Portfolio</title>
+    <title>Eve Mousain - Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="eve-10.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,21 +15,18 @@
     <div class="back">
     <header>
         <div class="header-container">
-        <nav class="nav">
+        <nav class="nav1">
             <a href="index.html" class="current">Projects</a>
-            <a href="Pictures.html">Pictures</a></nav>
+            <a href="Photography.html">Photography</a></nav>
 
             <div class="logo">
                 <a href="index.html"> <img src="eve-10.png"></a>
                 </div>
             
-            <nav class="nav">
+            <nav class="nav2">
                 <a href="About.html">About</a>
-                <a class="insta" href="https://www.instagram.com/mooon.svg/"><img src="insta-11.png"></a>
+                <a class="insta" href="https://www.instagram.com/mooon.svg/"><img src="insta.svg"></a>
             </nav>
-
-        <!-- <div class="nom"><h1><a href="About.html"> Eve Mousain ✧</a></h1><h2>graphic design student<br>emousain@gmail.com</h2></div>
-        </div> -->
     </header>
 
 
@@ -72,10 +69,6 @@
 </div>
 
 </div>
-
-<div class="footer">
-    
-    </div>
 
 </body>
 </html>
