--- a/index.html
+++ b/index.html
@@ -12,34 +12,36 @@
 </head>
 
 <body>
-    <div class="back">
+<div class="back">
     <header>
         <div class="header-container">
-        <nav class="nav1">
-            <a href="index.html" class="current">Projects</a>
-            <a href="Photography.html">Photography</a></nav>
+            <nav class="nav1">
+                <a href="index.html">Projects</a>
+                <a href="Photography.html">Photography</a>
+            </nav>
 
             <div class="logo">
                 <a href="index.html"> <img src="eve-10.png"></a>
-                </div>
+            </div>
             
             <nav class="nav2">
                 <a href="About.html">About</a>
                 <a class="insta" href="https://www.instagram.com/mooon.svg/"><img src="insta.svg"></a>
             </nav>
+        </div>
     </header>
 
 
     <div class="projets">
-     <div class="years">
-        <a class="year"> 2024</a>
-        <br> 
-        <a class="year"> 2023</a>
-     </div>
+        <div class="years">
+            <a class="year"> 2024</a>
+            <br> 
+            <a class="year"> 2023</a>
+        </div>
 
-     <div class="projet">
-        <ul>
-            <li><a href="bakst.html"> <h3>Bakst</h3> ✧ design</a></li>
+        <div class="projet">
+            <ul>
+            <li><a href="bakst.html"><h3>Bakst</h3> ✧ design</a></li>
             <li><a href="polke.html"><h3>Polke</h3> ✧ video</a></li>
             <li><a href="magazine.html"><h3>Urban Legend</h3> ✧ typography</a></li>
             <li><a href="70's.html"><h3>70's</h3> ✧ photography</a></li>
@@ -51,9 +53,9 @@
             <li><a href="game.html"><h3>7 families</h3> ✧ design</a></li>
             <li><a href="frog.html"><h3>Frog</h3> ✧ volume</a></li>
             </ul>
-    </div>
+        </div>
         
-    <div class="photo">
+        <div class="photo">
             <a href="bakst.html"> <img src="B1.png"></a>
             <a href="polke.html"> <img src="V1.png"></a>
             <a href="magazine.html"> <img src="L1.png"></a>
@@ -64,10 +66,8 @@
             <a href="polygone.html"> <img src="P1.png"></a>
             <a href="game.html"> <img src="F1.1.png"></a>
             <a href="frog.html"> <img src="Z1.png"></a>
+        </div>
     </div>
-</div>
-</div>
-
 </div>
 
 </body>
