--- a/bianzhidai.html
+++ b/bianzhidai.html
@@ -62,11 +62,11 @@
                         <br> Indesign
                         <br> 29.7x42 cm - 3 sets of colors
                     </div>
-                    <a><img src="S(11).jpg"><img src="S(13.1).JPG"></a>
+                    <a><img src="S(11).jpg"><img src="S(13.1).jpg"></a>
                 </div>
 
                 <div class="des">
-                    <a><img src="S(5).jpg"><img src="S(10.1).JPG"></a>
+                    <a><img src="S(5).jpg"><img src="S(10.1).jpg"></a>
                 </div>
             </div>
         </div>
