--- a/olympia.html
+++ b/olympia.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eve Mousain Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Dots:wght@400..700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -66,16 +65,17 @@
             <div class="colonnes">
                 <div class="des">
                     <div class="text">
-                        A reflection on 1970s fashion in 2024, explored through digital photography. Three different sets of clothing, each conveying a distinct mood. The model embodies a unique character for each set, expressing their personality through poses and, of course, the clothing.
+                        'Olympia' was painted by Édouard Manet in 1863. The model, Victorine Meurent, was not only Manet’s muse but also a painter in her own right, though her artistic career was largely overshadowed. The fictive series Olympia follows a young woman in the 1960s as she tries to make a name for herself in the art world. Like many female artists before and after her, she must reclaim the representation of the female body, navigating an art scene still dominated by male perspectives.
                         <br>
-                        <br>Digital photography / Photoshop / Model : Louisa Waille
-                        <br>21x29.7cm - 100g ivory paper
+                        <br>DaVinci / Photoshop
                     </div>
-                    <a><img src="M(4).jpg"><img src="M(8).jpg"><img src="M(45).jpg"><img src="M(47).jpg"></a>
+                    <a><img src="O(7).jpg"><img src="O(8).jpg"><img src="O(9).jpg"><img src="O(10).jpg"></a>
                 </div>
 
                 <div class="des">
-                    <a><img src="M(10.2).jpg"><img src="M(1).jpg"><img src="M(46).jpg"></a>
+                    <iframe class="i" src="https://www.youtube.com/embed/fX3cYcB4VwM" frameborder="0"></iframe>
+                    <br>
+                    <a><img src="O(11).jpg"><img src="O(12).jpg"><img src="O(13).jpg"></a>
                 </div>
             </div>
         </div>
