--- a/chienne.html
+++ b/chienne.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eve Mousain Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Dots:wght@400..700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -66,16 +65,15 @@
             <div class="colonnes">
                 <div class="des">
                     <div class="text">
-                        A reflection on 1970s fashion in 2024, explored through digital photography. Three different sets of clothing, each conveying a distinct mood. The model embodies a unique character for each set, expressing their personality through poses and, of course, the clothing.
+                        'Chienne de vie' ('Dog's Life') is a subjective brand with the goal of selling alcohol in small but effective amounts. This brand believes that alcohol is the solution to problems and should be made easily accessible. The alcohol is contained in small glass bottles, meant to be consumed in one shot after opening.
                         <br>
-                        <br>Digital photography / Photoshop / Model : Louisa Waille
-                        <br>21x29.7cm - 100g ivory paper
+                        <br>Illustrator / Blender
                     </div>
-                    <a><img src="M(4).jpg"><img src="M(8).jpg"><img src="M(45).jpg"><img src="M(47).jpg"></a>
+                    <a><img src="D.gif"><img src="D(2).jpg"><img src="D(3).jpg"></a>
                 </div>
 
                 <div class="des">
-                    <a><img src="M(10.2).jpg"><img src="M(1).jpg"><img src="M(46).jpg"></a>
+                    <a><img src="D(5).jpg"><img src="D(6).jpg"><img src="D(4).jpg"></a>
                 </div>
             </div>
         </div>
