--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
     <div class="projets">
         <div class="years">
+            <a class="year"> 2025</a>
+            <br> 
             <a class="year"> 2024</a>
             <br> 
             <a class="year"> 2023</a>
@@ -41,6 +43,12 @@
 
         <div class="projet">
             <ul>
+            <li><a href="chienne.html"><h3>Chienne de vie</h3> ✧ design</a></li>
+            <li><a href="branly.html"><h3>Branly</h3> ✧ photography</a></li>
+            <li><a href="olympia.html"><h3>Olympia</h3> ✧ video</a></li>
+            <li><a href="lune.html"><h3>Clair de Lune</h3> ✧ photography</a></li>
+            <li><a href="étoffe.html"><h3>Eloge de l'étoffe</h3> ✧ typography</a></li>
+            <p></p>
             <li><a href="bakst.html"><h3>Bakst</h3> ✧ design</a></li>
             <li><a href="polke.html"><h3>Polke</h3> ✧ video</a></li>
             <li><a href="magazine.html"><h3>Urban Legend</h3> ✧ typography</a></li>
@@ -56,6 +64,11 @@
         </div>
         
         <div class="photo">
+            <a href="chienne.html"> <img src="D1.png"></a>
+            <a href="branly.html"> <img src="A1.2.png"></a>
+            <a href="olympia.html"> <img src="O1.png"></a>
+            <a href="lune.html"> <img src="W1.png"></a>
+            <a href="étoffe.html"> <img src="E1.png"></a>
             <a href="bakst.html"> <img src="B1.png"></a>
             <a href="polke.html"> <img src="V1.png"></a>
             <a href="magazine.html"> <img src="L1.png"></a>
