--- a/lune.html
+++ b/lune.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eve Mousain Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Dots:wght@400..700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -66,16 +65,16 @@
             <div class="colonnes">
                 <div class="des">
                     <div class="text">
-                        A reflection on 1970s fashion in 2024, explored through digital photography. Three different sets of clothing, each conveying a distinct mood. The model embodies a unique character for each set, expressing their personality through poses and, of course, the clothing.
+                        A photographic project inspired by Barbara Loden’s 1970 film 'Wanda'. Like the film, the edition tells the story of a journey, an aimless wandering, as if the characters are searching for something or someone. The journey leads nowhere, seemingly without purpose.
                         <br>
-                        <br>Digital photography / Photoshop / Model : Louisa Waille
-                        <br>21x29.7cm - 100g ivory paper
+                        <br>Digital photography / Indesign
+                        <br>21 x 29.7 cm
                     </div>
-                    <a><img src="M(4).jpg"><img src="M(8).jpg"><img src="M(45).jpg"><img src="M(47).jpg"></a>
+                    <a><img src="W(4).jpg"><img src="W(1).jpg"><img src="W(6).jpg"></a>
                 </div>
 
                 <div class="des">
-                    <a><img src="M(10.2).jpg"><img src="M(1).jpg"><img src="M(46).jpg"></a>
+                    <a><img src="W(0).jpg"><img src="W(8).jpg"><img src="W(7).jpg"></a>
                 </div>
             </div>
         </div>
