--- a/étoffe.html
+++ b/étoffe.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eve Mousain Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Dots:wght@400..700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -66,16 +65,16 @@
             <div class="colonnes">
                 <div class="des">
                     <div class="text">
-                        A reflection on 1970s fashion in 2024, explored through digital photography. Three different sets of clothing, each conveying a distinct mood. The model embodies a unique character for each set, expressing their personality through poses and, of course, the clothing.
+                        A layout proposal for the text “In praise of Fabric”: Italian Interior Design and Its Women (1923-1057), written by Michela Bassanelli <a href="http://www.problemata.org/en/articles/1692">(http://www.problemata.org/en/articles/1692).</a> The book's format echoes the aesthetic of fabric samples attached to one another, while the text layout and the use of risography create a unique pattern on each page.
                         <br>
-                        <br>Digital photography / Photoshop / Model : Louisa Waille
-                        <br>21x29.7cm - 100g ivory paper
+                        <br>Indesign / Risography
+                        <br>10.5 x 21 cm
                     </div>
-                    <a><img src="M(4).jpg"><img src="M(8).jpg"><img src="M(45).jpg"><img src="M(47).jpg"></a>
+                    <a><img src="E(2).jpg"><img src="E(4).jpg"></a>
                 </div>
 
                 <div class="des">
-                    <a><img src="M(10.2).jpg"><img src="M(1).jpg"><img src="M(46).jpg"></a>
+                    <a> <img src="E(1).jpg"><img src="E(3).jpg"></a>
                 </div>
             </div>
         </div>
