--- a/70's.html
+++ b/70's.html
@@ -66,7 +66,10 @@
             <div class="colonnes">
                 <div class="des">
                     <div class="text">
-                        A reflection on 1970s fashion in 2024, explored through digital photography. Three different sets of clothing, each conveying a distinct mood. The model embodies a unique character for each set, expressing their personality through poses and, of course, the clothing.
+                        (EN) - A reflection on 1970s fashion in 2024, explored through digital photography. Three different sets of clothing, each conveying a distinct mood. The model embodies a unique character for each set, expressing their personality through poses and, of course, the clothing.
+                        <br>
+                        <br>
+                        (FR) - Une réflexion sur la mode des années 70 en 2024, explorée à travers la photographie numérique. Trois ensembles de vêtements, chacun véhiculant une ambiance distincte. Le modèle incarne un personnage différent pour chaque ensemble, exprimant sa personnalité à travers les poses et, bien sûr, les vêtements.
                         <br>
                         <br>Digital photography / Photoshop / Model : Louisa Waille
                         <br>21x29.7cm - 100g ivory paper
