--- a/bakst.html
+++ b/bakst.html
@@ -65,7 +65,10 @@
             <div class="colonnes">
                 <div class="des">
                     <div class="text">
-                        An artist’s box inspired by the work of Léon Bakst, who designed sets and costumes for the Ballets Russes. The box contains five posters, four books, a card game, 16 bookmarks, and stickers. Each side of the box is designed around different periods of Bakst's work.
+                        (EN) - An artist’s box inspired by the work of Léon Bakst, who designed sets and costumes for the Ballets Russes. The box contains five posters, four books, a card game, 16 bookmarks, and stickers. Each side of the box is designed around different periods of Bakst's work.
+                        <br>
+                        <br>
+                        (FR) - Un coffret d'artiste inspiré par le travail de Léon Bakst, qui a conçu des décors et des costumes pour les Ballets Russes. La boîte contient cinq affiches, quatre livres, un jeu de cartes, 16 marque-pages et des stickers. Chaque côté de la boîte est construit d'après les différentes périodes du travail de Bakst.
                         <br>
                         <br>Illustrator / Indesign / Photoshop
                     </div>
