--- a/bianzhidai.html
+++ b/bianzhidai.html
@@ -65,8 +65,11 @@
             <div class="colonnes">
                 <div class="des">
                     <div class="text">
-                        A typographic specimen of the BianZhiDai font, designed by Xiaoyuan Gao from the notyourtype foundry. The specimen is built around the six styles of the font’s first version: Base, Comic, Cube, Pearl, Ring, and Square.
-                        <br> 
+                        (EN) - A typographic specimen of the BianZhiDai font, designed by Xiaoyuan Gao from the notyourtype foundry. The specimen is built around the six styles of the font’s first version: Base, Comic, Cube, Pearl, Ring, and Square.
+                        <br>
+                        <br>
+                        (FR) - Un spécimen typographique de la police BianZhiDai, conçue par Xiaoyuan Gao de la fonderie notyourtype. Le spécimen est construit autour des six styles de la première version de la police : Base, Comic, Cube, Pearl, Ring et Square.
+                        <br>
                         <br> Indesign
                         <br> 29.7x42 cm - 3 sets of colors
                     </div>
