--- a/branly.html
+++ b/branly.html
@@ -65,7 +65,10 @@
             <div class="colonnes">
                 <div class="des">
                     <div class="text">
-                        Branly is a large school complex located in the south of Amiens (France). Every hallway looks the same, forming a labyrinth where one could easily get lost. This photo series highlights the machines present in the classrooms, each with its own unique shape and color.
+                        (EN) - Branly is a large school complex located in the south of Amiens (France). Every hallway looks the same, forming a labyrinth where one could easily get lost. This photo series highlights the machines present in the classrooms, each with its own unique shape and color.
+                        <br>
+                        <br>
+                        (FR) - Branly est une grande cité scolaire situé au sud d'Amiens. Chaque couloir se ressemble, formant un labyrinthe où l'on pourrait facilement se perdre. Cette série de photos se concentre les machines présentes dans les salles de classe, chacune ayant sa propre forme et sa propre couleur.
                         <br>
                         <br>Digital photography / Photoshop
                         <br>8 posters, 29.7 x 42 cm
