--- a/chienne.html
+++ b/chienne.html
@@ -65,7 +65,10 @@
             <div class="colonnes">
                 <div class="des">
                     <div class="text">
-                        'Chienne de vie' ('Dog's Life') is a subjective brand with the goal of selling alcohol in small but effective amounts. This brand believes that alcohol is the solution to problems and should be made easily accessible. The alcohol is contained in small glass bottles, meant to be consumed in one shot after opening.
+                        (EN) - 'Chienne de vie' ('Dog's Life') is a subversive brand with the goal of selling alcohol in small but effective amounts. This brand believes that alcohol is the solution to problems and should be made easily accessible. The alcohol is contained in small glass bottles, meant to be consumed in one shot after opening.
+                        <br>
+                        <br>
+                        (FR) - 'Chienne de vie' est une marque subversive ayant pour but de vendre de l'alcool très concentré en petites quantités. Cette marque considère que l'alcool est la solution aux problèmes et doit être rendu facilement accessible. L'alcool est contenu dans de petites bouteilles en verre, destinées à être consommées en une seule fois après ouverture.
                         <br>
                         <br>Illustrator / Blender
                     </div>
