--- a/frog.html
+++ b/frog.html
@@ -66,7 +66,10 @@
             <div class="colonnes">
                 <div class="des">
                         <div class="text">
-                            Frogs are always in motion — jumping, walking, or swimming. They are the perfect animal to embody in a puppet that can move. My puppet’s back legs are articulated to mimic a frog's jumping motion.
+                            (EN) - Frogs are always in motion — jumping, walking, or swimming. They are the perfect animal to embody in a puppet that can move. My puppet’s back legs are articulated to mimic a frog's jumping motion.
+                            <br>
+                            <br>
+                            (FR) - Les grenouilles sont toujours en mouvement - sautant, marchant ou nageant. Elles sont l'animal parfait à incarner dans une marionnette qui peut bouger. Les pattes arrière de ma marionnette sont articulées pour imiter le mouvement de saut d'une grenouille.
                             <br>
                             <br>Foam
                             <br>14x17x24cm
