--- a/game.html
+++ b/game.html
@@ -66,7 +66,10 @@
             <div class="colonnes">
                 <div class="des">
                     <div class="text">
-                        "7 families" is a card game inspired by mythological and folkloric creatures from around the world. Each family is represented by four creatures, linked by a distinct color palette. The illustrations are hand-drawn, with a style reminiscent of observational sketches.
+                        (EN) - '7 families' is a card game inspired by mythological and folkloric creatures from around the world. Each family is represented by four creatures, linked by a distinct color palette. The illustrations are hand-drawn, with a style reminiscent of observational sketches.
+                        <br>
+                        <br>
+                        (FR) - '7 familles' est un jeu de cartes inspiré par des créatures mythologiques et folkloriques du monde entier. Chaque famille est représentée par quatre créatures, liées par une palette de couleurs distincte. Les illustrations sont dessinées à la main, avec un style rappelant les croquis d'observation.
                         <br>
                         <br>Hand draw / Illustrator
                         <br>5x7cm - 28 cards
