--- a/lune.html
+++ b/lune.html
@@ -65,7 +65,10 @@
             <div class="colonnes">
                 <div class="des">
                     <div class="text">
-                        A photographic project inspired by Barbara Loden’s 1970 film 'Wanda'. Like the film, the edition tells the story of a journey, an aimless wandering, as if the characters are searching for something or someone. The journey leads nowhere, seemingly without purpose.
+                        (EN) - A photographic project inspired by Barbara Loden’s 1970 film 'Wanda'. Like the film, the edition tells the story of a journey, an aimless wandering, as if the characters are searching for something or someone. The journey leads nowhere, seemingly without purpose.
+                        <br>
+                        <br>
+                        (FR) - Projet photographique inspiré du film de Barbara Loden de 1970 'Wanda'. Comme le film, l'édition raconte l'histoire d'un voyage, d'une errance sans but, comme si les personnages cherchaient quelque chose ou quelqu'un. Le voyage ne mène nulle part, semblant sans but.
                         <br>
                         <br>Digital photography / Indesign
                         <br>21 x 29.7 cm
