--- a/magazine.html
+++ b/magazine.html
@@ -66,7 +66,10 @@
             <div class="colonnes">
                 <div class="des">
                     <div class="text">
-                        Two issues of an imaginary magazine created for teenagers who love horror and spooky stories. Each issue illustrates a modern monster tale while exploring the myth’s origins. The magazine includes stickers and a page where readers can write their own horror story.
+                        (EN) - Two issues of an imaginary magazine created for teenagers who love horror and spooky stories. Each issue illustrates a modern monster tale while exploring the myth’s origins. The magazine includes stickers and a page where readers can write their own horror story.
+                        <br>
+                        <br>
+                        (FR) - Deux numéros d'un magazine imaginaire créé pour les adolescents qui aiment les histoires d'horreur et les récits effrayants. Chaque numéro illustre une légende de monstre moderne tout en explorant les origines du mythe. Le magazine comprend des autocollants et une page où les lecteurs peuvent écrire leur propre histoire d'horreur.
                         <br>
                         <br>Indesign / Photoshop / Illustrator
                         <br>21x29.7cm
