--- a/olympia.html
+++ b/olympia.html
@@ -65,7 +65,10 @@
             <div class="colonnes">
                 <div class="des">
                     <div class="text">
-                        'Olympia' was painted by Édouard Manet in 1863. The model, Victorine Meurent, was not only Manet’s muse but also a painter in her own right, though her artistic career was largely overshadowed. The fictive series Olympia follows a young woman in the 1960s as she tries to make a name for herself in the art world. Like many female artists before and after her, she must reclaim the representation of the female body, navigating an art scene still dominated by male perspectives.
+                        (EN) - 'Olympia' was painted by Édouard Manet in 1863. The model, Victorine Meurent, was not only Manet’s muse but also a painter in her own right, though her artistic career was largely overshadowed. The fictive series 'Olympia' follows a young woman in the 1960s as she tries to make a name for herself in the art world. Like many female artists before and after her, she must reclaim the representation of the female body, navigating an art scene still dominated by male perspectives.
+                        <br>
+                        <br>
+                        (FR) - 'Olympia' est peint par Édouard Manet en 1863. Le modèle, Victorine Meurent, n'était pas seulement la muse de Manet mais aussi peintre, bien que sa carrière artistique ait été largement oubliée. La série fictive 'Olympia' suit une jeune femme dans les années 1960 alors qu'elle tente de se faire un nom dans le monde de l'art. Comme de nombreuses artistes avant et après elle, elle doit se réapproprier la représentation du corps féminin, naviguant dans une scène artistique encore dominée par des perspectives masculines.
                         <br>
                         <br>DaVinci / Photoshop
                     </div>
