--- a/polke.html
+++ b/polke.html
@@ -66,7 +66,10 @@
             <div class="colonnes">
                 <div class="des">
                     <div class="text">
-                        A reinterpretation of Sigmar Polke's work through video, based on his painting series Untitled (Mönchengladbach, 1992). Throughout the video, graphic elements appear one by one in sync with the music. Shapes and colors interact, gradually revealing the complete artwork at the end.
+                        (EN) - A reinterpretation of Sigmar Polke's work through video, based on his painting series 'Untitled (Mönchengladbach, 1992)'. Throughout the video, graphic elements appear one by one in sync with the music. Shapes and colors interact, gradually revealing the complete artwork at the end.
+                        <br>
+                        <br>
+                        (FR) - Une réinterprétation de l'œuvre de Sigmar Polke à travers la vidéo, basée sur sa série de peintures 'Untitled (Mönchengladbach, 1992)'. Tout au long de la vidéo, des éléments graphiques apparaissent un par un en synchronisation avec la musique. Formes et couleurs interagissent, révélant progressivement l'œuvre complète à la fin.
                         <br>
                         <br>After Effects / Photoshop / Audacity
                     </div>
