--- a/polygone.html
+++ b/polygone.html
@@ -66,7 +66,10 @@
             <div class="colonnes">
                 <div class="des">
                     <div class="text">
-                        A typeface inspired by cuneiform writing, using lines and polyforms to create letters. It references both the origins of writing and printing. The poster features the first text ever printed: the Bible.
+                        (EN) - A typeface inspired by cuneiform writing, using lines and polyforms to create letters. It references both the origins of writing and printing. The poster features the first text ever printed: the Bible.
+                        <br>
+                        <br>
+                        (FR) - Une police de caractères inspirée de l'écriture cunéiforme, utilisant des lignes et des polyformes pour créer des lettres. Elle fait référence aux origines de l'écriture et de l'impression. Le premier texte imprimé figure sur l'affiche : la Bible.
                         <br>
                         <br>Calligrph / Indesign
                         <br>29.7x40cm
