--- a/tarot.html
+++ b/tarot.html
@@ -66,7 +66,10 @@
             <div class="colonnes">
                 <div class="des">
                     <div class="text">
-                        A personal reinterpretation of divinatory tarot, featuring the 22 major arcana of the deck. The traditional human figures are symbolized by objects and specific colors. The drawings are rendered in 3D and then animated.
+                        (EN) - A personal reinterpretation of divinatory tarot, featuring the 22 major arcana of the deck. The traditional human figures are symbolized by objects and specific colors. The drawings are rendered in 3D and then animated.
+                        <br>
+                        <br>
+                        (FR) - Une réinterprétation personnelle du tarot divinatoire, mettant en scène les 22 arcanes majeurs du jeu. Les figures humaines traditionnelles sont symbolisées par des objets et des couleurs spécifiques. Les dessins sont réalisés en 3D puis animés.
                         <br>
                         <br>Clip Studio Paint / Blender
                         <br>5.5x10.5cm - 3D render
