--- a/étoffe.html
+++ b/étoffe.html
@@ -65,7 +65,10 @@
             <div class="colonnes">
                 <div class="des">
                     <div class="text">
-                        A layout proposal for the text “In praise of Fabric”: Italian Interior Design and Its Women (1923-1057), written by Michela Bassanelli <a href="http://www.problemata.org/en/articles/1692">(http://www.problemata.org/en/articles/1692).</a> The book's format echoes the aesthetic of fabric samples attached to one another, while the text layout and the use of risography create a unique pattern on each page.
+                        (EN) - A layout proposal for the text “In praise of Fabric”: Italian Interior Design and Its Women (1923-1057), written by Michela Bassanelli <a href="http://www.problemata.org/en/articles/1692">(http://www.problemata.org/en/articles/1692).</a> The book's format echoes the aesthetic of fabric samples attached to one another, while the text layout and the use of risography create a unique pattern on each page.
+                        <br>
+                        <br>
+                        (FR) - Proposition de mise en page du texte “Eloge de l’étoffe : le design d’intérieur italien et ses femmes (1923-1957)” de Michela Bassanelli <a href="http://www.problemata.org/fr/articles/1691">(http://www.problemata.org/fr/articles/1692).</a> Le format du livre évoque l’esthétique des échantillons de tissus attachés les uns aux autres, tandis que la mise en page du texte et l’utilisation de la risographie créent un motif unique sur chaque page.
                         <br>
                         <br>Indesign / Risography
                         <br>10.5 x 21 cm
