--- a/About.html
+++ b/About.html
@@ -33,8 +33,11 @@
 
     <div class="about">
         <h1>Eve Mousain</h1>
-        <p>✧ I'm a graphic design student at <a class="esad" href="https://esad-amiens.design/fr"><strong>ESAD Amiens</strong></a> since 2023. I like to work on various projects, from design to photography, 3D, volume and also typography. I have been learning 3D by myself since a few years and I'm looking forward to incorporating it into some of my future projects.</p>
+        <p>(EN) ✧ I'm a graphic design student at <a class="esad" href="https://esad-amiens.design/fr"><strong>ESAD Amiens</strong></a> since 2023. I like to work on various projects, from design to photography, 3D, volume and also typography. I have been learning 3D by myself since a few years and I'm looking forward to incorporating it into some of my future projects.</p>
+        <p>(FR) ✧ Je suis étudiante en design graphique à <a class="esad" href="https://esad-amiens.design/fr"><strong>l'ESAD Amiens</strong></a> depuis 2023. J'aime travailler sur divers projets, allant du design à la photographie, en passant par la 3D, le volume et aussi la typographie. J'apprends la 3D de manière autodidacte depuis quelques années et je souhaite l'incorporer dans mes futurs projets.</p>
         <h2>I'm looking for an internship from June to August 2025 Contact me : emousain@gmail.com</h2>
+        <h2>Je suis à la recherche d'un stage de Juin à Août 2025 Contactez moi : emousain@gmail.com</h2>
+
     </div>
 
 </div>
