--- a/cycles.html
+++ b/cycles.html
@@ -66,7 +66,10 @@
             <div class="colonnes">
                 <div class="des">
                     <div class="text">
-                        A photographic exploration of the relationship between nature and artificiality. The series places flowers and leaves in artificial environments, illuminated with harsh lighting and saturated colors.
+                        (EN) - A photographic exploration of the relationship between nature and artificiality. The series places flowers and leaves in artificial environments, illuminated with harsh lighting and saturated colors.
+                        <br>
+                        <br>
+                        (FR) - Une série photographique qui explore la relation entre nature et artificiel. Les photographies rendent compte d'éléments naturels, des fleurs et feuilles, placés dans des environnements artificiels, éclairés par une lumière crue et des couleurs saturées.
                         <br>
                         <br>Digital photography
                         <br>21x14.8 cm - Glossy photo paper
